<resources>
    <string name="app_name">DailyMilk</string>
    <string name="title_activity_login">Log in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="drinks">
    </string-array>
    <string name="Username"></string>
    <string name="about">About DailyMilk</string>
    <string name="about_">Daily Milk is an idea based on the daily milk need of our coworkers.\nThe idea was based on some kind of food-delivery service like Lieferservice.at.\nFor more information about our project write us an email.(jan.burtscher@student.htldornbirn.at)\n</string>
    <string name="howto">How to order</string>
    <string name="howto_0">\u2022Log in with your username and password.</string>
    <string name="howto_1">\u2022Select your drink and place the order with the button below.</string>
    <string name="howto_2">\u2022You can only order once every 20 hours.</string>
    <string name="howto_3">\u2022You will recieve your drink shortly after you ordered it.\n</string>
    <string name="enjoy">Enjoy your Milk!</string>
</resources>
